# windraw

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
example/: CMakeLists.txt  main.cpp
include/windraw/: windraw.hpp
src/: CMakeLists.txt
src/windraw/: CMakeLists.txt  event.hpp  math.hpp  platform.hpp  spec.hpp  window.cpp  window.hpp  windraw.hpp
src/windraw/graphics/: bitmap.hpp  canvas.cpp  canvas.hpp  canvas_impl.hpp  shapes.hpp
src/windraw/util/: color.cpp  color.hpp  math.cpp  math.hpp
src/windraw/window/: event.hpp  math.cpp  math.hpp  style.hpp  window.cpp  window.hpp
